helm/istio/virtualservices/harbor-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-vs
  namespace: istio-system
spec:
  hosts:
    - harbor.seokmin.com
  gateways:
    - test-gateway
  http:
    # 1. HTTP → HTTPS 리다이렉트
    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 308

    # 2. /api, /service, /c 경로는 core로 전달
    - match:
        - uri:
            prefix: /api/
        - uri:
            prefix: /service/
        - uri:
            prefix: /c/
        - uri:
            prefix: /v2/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80

    # 3. 그 외는 portal로 전달
    - route:
        - destination:
            host: harbor-portal.harbor.svc.cluster.local
            port:
              number: 80
